--- a/Neuronix-Labs/Views/Shared/_Layout.cshtml
+++ b/Neuronix-Labs/Views/Shared/_Layout.cshtml
@@ -54,10 +54,11 @@
     <!-- Load scripts at the end of the body -->
     <script src="~/lib/jquery/dist/jquery.min.js" asp-append-version="true"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" asp-append-version="true"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
 
     <!-- Render custom scripts -->
     @await RenderSectionAsync("Scripts", required: false)
+    <script src="~/js/site.js"></script>
 </body>
+
 
 </html>
